tried to fix spacing

--- a/assets/css/css/styles.css
+++ b/assets/css/css/styles.css
@@ -143,6 +143,7 @@ body {
 
 .contact-me-icons {
     max-width: 100px;
+    padding: 10px;
 }
 
 .static-image {
